# JAVIS

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  koyeb.yaml  pyproject.toml  railway.json  render.yaml  requirements-training.txt  requirements.txt  run_modal.py  run_training.py
configs/: config.yaml
data/training/v0.1/: conversations_example.jsonl  manifest.json
docs/: 01-PROJECT-OVERVIEW.md  02-ROADMAP.md  03-MODEL-VERSIONING.md  04-TECH-STACK.md  05-DEPLOYMENT.md  ARCHITECTURE.md  USER_GUIDE.md  VERSIONING.md  auto_training_pipeline.md
javis/: __init__.py  __main__.py
javis/core/: __init__.py
javis/data/: __init__.py  conversation_logger.py
javis/interfaces/: __init__.py  api.py  cli.py
javis/memory/: __init__.py
javis/models/: __init__.py  client.py  local_client.py  modal_client.py
javis/rag/: __init__.py
javis/tools/: __init__.py
javis/training/: __init__.py  finetune.py  manage.py  notifications.py  pipeline.py  remote.py  scheduler.py  version_manager.py
javis/utils/: __init__.py  config.py
notebooks/: finetune_colab.ipynb
static/: index.html
